--- a/DartScoreboard-main/styles.css
+++ b/DartScoreboard-main/styles.css
@@ -4,17 +4,38 @@ ol {
 
 li {
     border-bottom: 1px solid black; 
-    padding: 5px; 
-  }
+    padding: 5px;
+    width: auto; /* Set a fixed width for the list items */
+    height: 50px; /* Set a fixed height for the list items */
+    text-align: center; /* Center the content horizontally */
+    font-size: 40px;
+}
+
 body {
     background-color: antiquewhite;
-    display: flex;
+
 }
 
 .points {
-    padding-top: 11ch;
+
 }
 .score {
     display: flex;
     justify-content: center;
+    font-size: 40px;
+    width: 100%;
+    max-width: 200px;
+}
+img {
+    width: auto;
+    height: 50px;
+}
+
+h2 {
+    font-size: 50px;
+}
+
+
+.container2 {
+    display: flex;
 }
